# Expense-Categorizer-App

./: README.md  Test.py  app.py  categories.json  categorizer.py  generate_pdf.py  google_auth.py  index.html  layout.html  login.html  models.py  ocr_processor.py  pyproject.toml  register.html  replit.nix  requirements.txt  reset_password.html  results.html  upload.html  utils.py
